env/code_53bf454983994/stderr.txt
  File "main.py", line 3
    for i in range(1,369900:
                           ^
SyntaxError: invalid syntax
